bring my mods in to my fork main

--- a/conky.conf
+++ b/conky.conf
@@ -1,4 +1,36 @@
+--[[
+Conky, a system monitor, based on torsmo
+
+Any original torsmo code is licensed under the BSD license
+
+All code written since the fork of torsmo is licensed under the GPL
+
+Please see COPYING for details
+
+Copyright (c) 2004, Hannu Saransaari and Lauri Hakkarainen
+Copyright (c) 2005-2019 Brenden Matthews, Philip Kovacs, et. al. (see AUTHORS)
+All rights reserved.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+]]
+
+-- CJB 10Jul2021 - Config Forked From: https://github.com/moabdrabou/Conky_Desktop_Guru/blob/main/conky.conf - Modified for use on my RPi 4B+ running Ubuntu 21.04 Hirsute aarch64 :-) Hope it may help others with similar config!
+
 conky.config ={
+
+  -- IMPORT LUA SCRIPTS
+  lua_load = '/etc/conky/lua-scripts/vcgencmd-funcs.lua',
+  
   -- CONKY SETTINGS
   background = true,
   update_interval = 1,
@@ -31,8 +63,8 @@ conky.config ={
 
   minimum_height = 1020,
 
-  minimum_width = 280,
-  maximum_width = 280,
+  minimum_width = 300,
+  maximum_width = 300,
 
   alignment = 'top_right',
   gap_x = 10,
@@ -47,7 +79,7 @@ conky.config ={
 
   -- TEXT SETTINGS
   use_xft = true,
-  font = 'Montserrat Regular:size=10',
+  font = 'DejaVu Sans:size=10',
   xftalpha = 0.2,
 
   uppercase = false,
@@ -67,65 +99,67 @@ conky.config ={
   color5 = '555555',
   color6 = '666666',
   color7 = '3b71a1',
+  color8 = 'FF0000',
 };
 
 
 conky.text = [[
-${alignc}${color1}${font Montserrat Bold:size=20}${time %H:%M:%S}${font}${color}${alignc}
+${alignc}${color1}${font DejaVu Sans Bold:size=20}${time %H:%M:%S}${font}${color}${alignc}
 ${voffset -9}
-${alignc}${font Montserrat Light:size=10}${time %A %d %B %Y}${font}${alignc}
+${alignc}${font DejaVu Sans:size=10}${time %A %d %B %Y}${font}${alignc}
 ${color6}${hr 2}${color} 
 ${voffset -6}
-${font Montserrat Light:size=8}${color1}SYSTEM:${color}${font} ${alignr}$sysname $nodename 
-${font Montserrat Light:size=8}${color1}UPTIME:${color}${font} ${alignr}$uptime_short
-${font Montserrat Light:size=8}${color1}KERNEL:${color}${font} ${alignr}$kernel ${voffset 5}
+${font DejaVu Sans:size=8}${color1}SYSTEM:${color}${font} ${alignr}$sysname $nodename 
+${font DejaVu Sans:size=8}${color1}UPTIME:${color}${font} ${alignr}$uptime_short
+${font DejaVu Sans:size=8}${color1}KERNEL:${color}${font} ${alignr}$kernel ${voffset 5}
 ${font :size=11}${color}CPUs ${color}${hr 2}${color}
 ${voffset -15}
-${font Montserrat Light:size=10}${color1}CPU:${color}${font} ${alignr}${color}AMD Ryzen 5 @ 3.60GHz${color}${font}
+${font DejaVu Sans:size=10}${color1}CPU:${color}${font} ${color}Broadcom BCM2835 QuadCore ARMv8${color}${font}
 ${voffset -15}
-${font Montserrat Light:size=9}${color1}01 - 04:${color}${font} ${goto 100}${cpu cpu1}% ${goto 150}${cpu cpu2 }% ${goto 200}${cpu cpu3 }% ${goto 250}${cpu cpu4 }%
-${font Montserrat Light:size=9}${color1}05 - 08:${color}${font} ${goto 100}${cpu cpu5}% ${goto 150}${cpu cpu6 }% ${goto 200}${cpu cpu7 }% ${goto 250}${cpu cpu8 }%
-${font Montserrat Light:size=9}${color1}09 - 12:${color}${font} ${goto 100}${cpu cpu9}% ${goto 150}${cpu cpu10}% ${goto 200}${cpu cpu11}% ${goto 250}${cpu cpu12}%
+${font DejaVu Sans:size=9}${color1}01 - 04 (${color4}MHz${color}${color1}):${color}${font} ${goto 120}${freq 1} ${goto 170}${freq 2} ${goto 220}${freq 3} ${goto 270}${freq 4}
 ${voffset -8}
-${font Montserrat Light:size=9}${color1}CPU TEMP:${color}${font} ${font :size=10}${alignr}${hwmon 1 temp 1}°${color4}C${color}${voffset 5}
+${font DejaVu Sans:size=9}${color1}01 - 04 (${color4}Load${color}${color1}):${color}${font} ${goto 120}${cpu cpu1}% ${goto 170}${cpu cpu2 }% ${goto 220}${cpu cpu3 }% ${goto 270}${cpu cpu4 }%
+${voffset -8}
+${font DejaVu Sans:size=9}${color1}CPU Temp${color} (${color4}°C${color}/${color8}°F${color1}):${color}${font} ${font :size=10}${alignr}${color4}${lua conky_vcgencmd_measure_temp_degC}/${color8}${lua conky_vcgencmd_measure_temp_degF}${voffset 5}
 ${font :size=11}${color}Network ${color}${hr 2}${color}
 ${voffset -15}
-${font Montserrat Light:size=10}${color1}IP ADDRESS:${color}${font} ${alignr}${addr enp6s0}
-${if_match "${addr enp6s0}"!="No Address"}${voffset 5}${font Montserrat Light:size=10}${font}Download ${alignr}${downspeedf enp6s0}k/s (${totaldown enp6s0})
-${color3}${downspeedgraph enp6s0 50,280 ADFF2F 32CD32 -t}
-${font Montserrat Light:size=10}${font}Upload ${alignr}${upspeedf enp6s0}k/s (${totalup enp6s0})
-${color3}${upspeedgraph enp6s0 50,280 FF0000 8B0000 -t}
-${endif}${voffset 5}${font :size=11}${color}HDD ${color}${hr 2}${color}
-${color1}Used: ${color3}${fs_used /}${color1}${goto 200}Free:${goto 250}${color3}${fs_free /}
+${font DejaVu Sans:size=10}${color1}LAN  IPv4:${color}${font} ${alignr}${addr wlan0}
+${font DejaVu Sans:size=10}${color1}WAN IPv4:${color}${font} ${alignr}${lua conky_get_public_ipv4_addr}
+${if_match "${addr wlan0}"!="No Address"}${voffset 5}${font DejaVu Sans:size=10}${font}Download ${alignr}${downspeedf ${}}k/s (${totaldown wlan0})
+${color3}${downspeedgraph wlan0 50,280 ADFF2F 32CD32 -t}
+${font DejaVu Sans:size=10}${font}Upload ${alignr}${upspeedf wlan0}k/s (${totalup wlan0})
+${color3}${upspeedgraph wlan0 50,280 FF0000 8B0000 -t}
+${endif}${voffset 5}${font :size=11}${color}microSD ${color}${hr 2}${color}
+${color1}Boot Device: ${alignr}${color4}${lua conky_get_boot_block_device_name}
+${color1}Root Device: ${alignr}${color4}${lua conky_get_root_block_device_name}
+${color}${hr 2}${color}
+${color1}Used: ${color3}${fs_used /}${color1}${goto 200}Free: ${goto 250}${color3}${fs_free /}
 ${color2}${fs_bar /}
-${font Montserrat Light:size=8}${color1}DISK I/O:${color}${font} ${alignr}$diskio
-${voffset 2}${font Montserrat Light:size=8}${color1}READ: ${color}${font} ${goto 80}${color4}${diskiograph_read  15,210 ADFF2F 32CD32 750}${color}
-${voffset 2}${font Montserrat Light:size=8}${color1}WRITE:${color}${font} ${goto 80}${color4}${diskiograph_write 15,210 FF0000 8B0000 750}${color}
+${font DejaVu Sans:size=8}${color1}DISK I/O:${color}${font} ${alignr}$diskio
+${voffset 2}${font DejaVu Sans:size=8}${color1}READ: ${color}${font} ${goto 80}${color4}${diskiograph_read  15,210 ADFF2F 32CD32 750}${color}
+${voffset 2}${font DejaVu Sans:size=8}${color1}WRITE:${color}${font} ${goto 80}${color4}${diskiograph_write 15,210 FF0000 8B0000 750}${color}
 ${font :size=11}${color}Memory ${color}${hr 2}${color}${voffset 2}
 $font${color DimGray}RAM $alignc $mem / $memmax $alignr ${color 188f18}$memperc%
 ${color 188f18}$membar${voffset 1}
 ${font :size=11}${color}GPU ${color}${hr 2}${color}${voffset 2}
-${font Montserrat Light:size=9}${color1}GPU Freq.: $alignr ${color}${font}${nvidia gpufreq} Mhz${voffset 3}
-${font Montserrat Light:size=9}${color1}Memory Freq.: $alignr ${color}${font}${nvidia memfreq} Mhz${voffset 3}
-${font Montserrat Light:size=9}${color1}Temperature: $alignr ${color}${font}${nvidia temp}°C ${voffset 3}
+${font DejaVu Sans:size=9}${color1}GPU Freq (${color4}MHz${color}${color1}):${color} $alignr ${font}${lua conky_vcgencmd_gpu_freq_mhz}${voffset 3}
+${font DejaVu Sans:size=9}${color1}GPU Memory (${color4}MB${color}${color1}):${color} $alignr ${font}${lua conky_vcgencmd_gpu_mem_mb}${voffset 3}
+${font DejaVu Sans:size=9}${color1}GPU Temp${color} (${color4}°C${color}/${color8}°F${color1}):${color}${font} ${font :size=10}${alignr}${color4}${lua conky_vcgencmd_measure_temp_degC}/${color8}${lua conky_vcgencmd_measure_temp_degF}${voffset 3}
 ${voffset 3}${font :size=11}${color}Processes ${color}${hr 2}${color}
 ${voffset -15}
-${font :size=10}${font Montserrat Light:size=8}${color1}TOTAL:${color}${font} ${alignr}${processes}
+${font :size=10}${font DejaVu Sans:size=8}${color1}TOTAL:${color}${font} ${alignr}${processes}
 ${voffset -10} 
-${font Montserrat Light:size=9}${color1}APP NAME: ${goto 160}MEMORY: ${goto 245}CPU: ${color}${font}
+${font DejaVu Sans:size=9}${color1}APP NAME: ${goto 160}MEMORY: ${goto 245}CPU: ${color}${font}
 ${voffset -16}
-${font Montserrat Light:size=9}${color1}${top_mem name 1} ${color}${font} ${goto 160}${top mem 1} % ${goto 235}${top cpu 1} %
-${font Montserrat Light:size=9}${color1}${top_mem name 2} ${color}${font} ${goto 160}${top mem 2} % ${goto 235}${top cpu 2} %
-${font Montserrat Light:size=9}${color1}${top_mem name 3} ${color}${font} ${goto 160}${top mem 3} % ${goto 235}${top cpu 3} %
-${font Montserrat Light:size=9}${color1}${top_mem name 4} ${color}${font} ${goto 160}${top mem 4} % ${goto 235}${top cpu 4} %
-${font Montserrat Light:size=9}${color1}${top_mem name 5} ${color}${font} ${goto 160}${top mem 5} % ${goto 235}${top cpu 5} %
-${font Montserrat Light:size=9}${color1}${top_mem name 6} ${color}${font} ${goto 160}${top mem 6} % ${goto 235}${top cpu 6} %
-${font Montserrat Light:size=9}${color1}${top_mem name 7} ${color}${font} ${goto 160}${top mem 7} % ${goto 235}${top cpu 7} %
-${font Montserrat Light:size=9}${color1}${top_mem name 8} ${color}${font} ${goto 160}${top mem 8} % ${goto 235}${top cpu 8} %
-${font Montserrat Light:size=9}${color1}${top_mem name 9} ${color}${font} ${goto 160}${top mem 9} % ${goto 235}${top cpu 9} %
-${font Montserrat Light:size=9}${color1}${top_mem name 10} ${color}${font} ${goto 160}${top mem 10} % ${goto 235}${top cpu 10} %
+${font DejaVu Sans:size=9}${color1}${top_mem name 1} ${color}${font} ${goto 160}${top mem 1} % ${goto 235}${top cpu 1} %
+${font DejaVu Sans:size=9}${color1}${top_mem name 2} ${color}${font} ${goto 160}${top mem 2} % ${goto 235}${top cpu 2} %
+${font DejaVu Sans:size=9}${color1}${top_mem name 3} ${color}${font} ${goto 160}${top mem 3} % ${goto 235}${top cpu 3} %
+${font DejaVu Sans:size=9}${color1}${top_mem name 4} ${color}${font} ${goto 160}${top mem 4} % ${goto 235}${top cpu 4} %
+${font DejaVu Sans:size=9}${color1}${top_mem name 5} ${color}${font} ${goto 160}${top mem 5} % ${goto 235}${top cpu 5} %
+${font DejaVu Sans:size=9}${color1}${top_mem name 6} ${color}${font} ${goto 160}${top mem 6} % ${goto 235}${top cpu 6} %
 
-${font Montserrat Light:size=10}${color1}${alignr}by: Mo Abdrabou${color}${font}
+
+${font DejaVu Sans:size=10}${color1}${alignr}RPi'd by: Chris Bishop${color}${font}
 
 
 ]];
