start working on making network interface dynamic (by active iface name) - 1

--- a/conky.conf
+++ b/conky.conf
@@ -33,7 +33,7 @@ conky.config ={
   
   -- CONKY SETTINGS
   background = true,
-  update_interval = 1,
+  update_interval = 5,
   total_run_times = 0,
   
   cpu_avg_samples = 2,
@@ -54,7 +54,7 @@ conky.config ={
   own_window_colour = '#0b0d18',
   own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
   -- own_window_transparent = true,
-  own_window_transparent = false,
+  own_window_transparent = true,
   own_window_type = 'normal',
   -- own_window_type = 'desktop',
 
@@ -121,14 +121,14 @@ ${voffset -8}
 ${font DejaVu Sans:size=9}${color1}01 - 04 (${color4}Load${color}${color1}):${color}${font} ${goto 120}${cpu cpu1}% ${goto 170}${cpu cpu2 }% ${goto 220}${cpu cpu3 }% ${goto 270}${cpu cpu4 }%
 ${voffset -8}
 ${font DejaVu Sans:size=9}${color1}CPU Temp${color} (${color4}°C${color}/${color8}°F${color1}):${color}${font} ${font :size=10}${alignr}${color4}${lua conky_vcgencmd_measure_temp_degC}/${color8}${lua conky_vcgencmd_measure_temp_degF}${voffset 5}
-${font :size=11}${color}Network ${color}${hr 2}${color}
+${font :size=11}${color}Network (${color4}${lua conky_get_active_network_interface_name}${color}):${color}${hr 2}${color}
 ${voffset -15}
-${font DejaVu Sans:size=10}${color1}LAN  IPv4:${color}${font} ${alignr}${addr wlan0}
+${font DejaVu Sans:size=10}${color1}LAN  IPv4:${color}${font} ${alignr}${lua conky_get_private_ipv4_addr}
 ${font DejaVu Sans:size=10}${color1}WAN IPv4:${color}${font} ${alignr}${lua conky_get_public_ipv4_addr}
-${if_match "${addr wlan0}"!="No Address"}${voffset 5}${font DejaVu Sans:size=10}${font}Download ${alignr}${downspeedf ${}}k/s (${totaldown wlan0})
-${color3}${downspeedgraph wlan0 50,280 ADFF2F 32CD32 -t}
+${if_match "${lua conky_get_private_ipv4_addr}"!="No Address"}${voffset 5}${font DejaVu Sans:size=10}${font}Download ${alignr}${downspeedf wlan0}k/s (${totaldown wlan0})
+${color3}${downspeedgraph wlan0 50,280 ADFF2F 32CD32 -t -l}
 ${font DejaVu Sans:size=10}${font}Upload ${alignr}${upspeedf wlan0}k/s (${totalup wlan0})
-${color3}${upspeedgraph wlan0 50,280 FF0000 8B0000 -t}
+${color3}${upspeedgraph wlan0 50,280 FF0000 8B0000 -t -l}
 ${endif}${voffset 5}${font :size=11}${color}microSD ${color}${hr 2}${color}
 ${color1}Boot Device: ${alignr}${color4}${lua conky_get_boot_block_device_name}
 ${color1}Root Device: ${alignr}${color4}${lua conky_get_root_block_device_name}
