continue work on making network interface dynamic - 2

--- a/conky.conf
+++ b/conky.conf
@@ -33,7 +33,7 @@ conky.config ={
   
   -- CONKY SETTINGS
   background = true,
-  update_interval = 5,
+  update_interval = 3,
   total_run_times = 0,
   
   cpu_avg_samples = 2,
@@ -109,9 +109,9 @@ ${voffset -9}
 ${alignc}${font DejaVu Sans:size=10}${time %A %d %B %Y}${font}${alignc}
 ${color6}${hr 2}${color} 
 ${voffset -6}
-${font DejaVu Sans:size=8}${color1}SYSTEM:${color}${font} ${alignr}$sysname $nodename 
-${font DejaVu Sans:size=8}${color1}UPTIME:${color}${font} ${alignr}$uptime_short
-${font DejaVu Sans:size=8}${color1}KERNEL:${color}${font} ${alignr}$kernel ${voffset 5}
+${font DejaVu Sans:size=8}${color1}User / Hostname:${color}${font} ${alignr}${color4}${eval $${uid_name ${pid_uid 1}}}${color} / ${color8}$nodename
+${font DejaVu Sans:size=8}${color1}OS / Kernel:${color}${font} ${alignr}${color4}$sysname${color} / ${color8}$kernel
+${font DejaVu Sans:size=8}${color1}Uptime:${color}${font} ${alignr}$uptime_short ${voffset 5}
 ${font :size=11}${color}CPUs ${color}${hr 2}${color}
 ${voffset -15}
 ${font DejaVu Sans:size=10}${color1}CPU:${color}${font} ${color}Broadcom BCM2835 QuadCore ARMv8${color}${font}
@@ -121,17 +121,17 @@ ${voffset -8}
 ${font DejaVu Sans:size=9}${color1}01 - 04 (${color4}Load${color}${color1}):${color}${font} ${goto 120}${cpu cpu1}% ${goto 170}${cpu cpu2 }% ${goto 220}${cpu cpu3 }% ${goto 270}${cpu cpu4 }%
 ${voffset -8}
 ${font DejaVu Sans:size=9}${color1}CPU Temp${color} (${color4}°C${color}/${color8}°F${color1}):${color}${font} ${font :size=10}${alignr}${color4}${lua conky_vcgencmd_measure_temp_degC}/${color8}${lua conky_vcgencmd_measure_temp_degF}${voffset 5}
-${font :size=11}${color}Network (${color4}${lua conky_get_active_network_interface_name}${color}):${color}${hr 2}${color}
+${font :size=11}${color}Network (${color4}${gw_iface}${color}/${color8}${gw_ip}${color})${color}${hr 2}${color}
 ${voffset -15}
-${font DejaVu Sans:size=10}${color1}LAN  IPv4:${color}${font} ${alignr}${lua conky_get_private_ipv4_addr}
+${font DejaVu Sans:size=10}${color1}LAN IPv4:${color}${font} ${alignr}${lua conky_get_private_ipv4_addr}
 ${font DejaVu Sans:size=10}${color1}WAN IPv4:${color}${font} ${alignr}${lua conky_get_public_ipv4_addr}
-${if_match "${lua conky_get_private_ipv4_addr}"!="No Address"}${voffset 5}${font DejaVu Sans:size=10}${font}Download ${alignr}${downspeedf wlan0}k/s (${totaldown wlan0})
+${if_match "${lua conky_get_private_ipv4_addr}"!="No Address"}${voffset 5}${font DejaVu Sans:size=10}${font}Download ${alignr}${eval $${downspeedf ${gw_iface}}}k/s (${eval $${totaldown ${gw_iface}}})
 ${color3}${downspeedgraph wlan0 50,280 ADFF2F 32CD32 -t -l}
-${font DejaVu Sans:size=10}${font}Upload ${alignr}${upspeedf wlan0}k/s (${totalup wlan0})
+${font DejaVu Sans:size=10}${font}Upload ${alignr}${eval $${upspeedf ${gw_iface}}}k/s (${eval $${totalup ${gw_iface}}})
 ${color3}${upspeedgraph wlan0 50,280 FF0000 8B0000 -t -l}
 ${endif}${voffset 5}${font :size=11}${color}microSD ${color}${hr 2}${color}
-${color1}Boot Device: ${alignr}${color4}${lua conky_get_boot_block_device_name}
-${color1}Root Device: ${alignr}${color4}${lua conky_get_root_block_device_name}
+${color1}Boot Block: ${alignr}${color4}${lua conky_get_boot_block_device_name}
+${color1}Root Block: ${alignr}${color4}${lua conky_get_root_block_device_name}
 ${color}${hr 2}${color}
 ${color1}Used: ${color3}${fs_used /}${color1}${goto 200}Free: ${goto 250}${color3}${fs_free /}
 ${color2}${fs_bar /}
@@ -157,7 +157,6 @@ ${font DejaVu Sans:size=9}${color1}${top_mem name 3} ${color}${font} ${goto 160}
 ${font DejaVu Sans:size=9}${color1}${top_mem name 4} ${color}${font} ${goto 160}${top mem 4} % ${goto 235}${top cpu 4} %
 ${font DejaVu Sans:size=9}${color1}${top_mem name 5} ${color}${font} ${goto 160}${top mem 5} % ${goto 235}${top cpu 5} %
 ${font DejaVu Sans:size=9}${color1}${top_mem name 6} ${color}${font} ${goto 160}${top mem 6} % ${goto 235}${top cpu 6} %
-
 
 ${font DejaVu Sans:size=10}${color1}${alignr}RPi'd by: Chris Bishop${color}${font}
 
